new questions done. Simpress company hhackerearth coding challenge